--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,23 +7,27 @@
   "extends": [
       "eslint:recommended",
       "plugin:react/recommended",
-      "plugin:@next/next/recommended"
+      "plugin:@next/next/recommended",
+      "plugin:@typescript-eslint/recommended"
   ],
   "parserOptions": {
       "ecmaFeatures": {
           "jsx": true
       },
       "ecmaVersion": "latest",
-      "sourceType": "module"
+      "sourceType": "module",
+      "parser": "@typescript-eslint/parser"
   },
   "plugins": [
-      "react"
+      "react",
+      "@typescript-eslint"
   ],
   "rules": {
     "semi": ["error", "always"],
     "quotes": ["error", "double"],
     "react/jsx-uses-react": "error",
-    "react/jsx-uses-vars": "error"
+    "react/jsx-uses-vars": "error",
+    "react/react-in-jsx-scope": "off"
   },
   "settings": {
     "react": {
