--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,8 @@
       "eslint:recommended",
       "plugin:react/recommended",
       "plugin:@next/next/recommended",
-      "plugin:@typescript-eslint/recommended"
+      "plugin:@typescript-eslint/recommended",
+      "prettier"
   ],
   "parserOptions": {
       "ecmaFeatures": {
