--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,17 @@
 {
   "env": {
       "browser": true,
-      "es2021": true,
+      "es6": true,
       "node": true
   },
   "extends": [
       "eslint:recommended",
+      "plugin:import/errors",
       "plugin:react/recommended",
       "plugin:@next/next/recommended",
       "plugin:@typescript-eslint/recommended",
+      "plugin:react-hooks/recommended",
+      "plugin:jsx-a11y/recommended",
       "prettier"
   ],
   "parserOptions": {
@@ -21,6 +24,8 @@
   },
   "plugins": [
       "react",
+      "import",
+      "jsx-a11y",
       "@typescript-eslint"
   ],
   "rules": {
